Make LanguagePicker part of Banner, fix alignment issues, overflow - CSS

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,7 @@
   color: black;
   position: absolute;
   top: 3px;
-  left: 29.5px;
+  left: 27px;
 }
 
 input.placeholda::placeholder {
